# quantumshield-vault

./: .dockerignore  .env.example  .env.production  .eslintrc.cjs  AGENTS.md  BUILD_SUMMARY.md  DEPLOYMENT.md  MANIFEST.md  Makefile  README.md  SETUP_VERIFICATION.md  VERIFICATION_COMPLETE.txt  docker-compose.yml  logging.yaml  nginx.conf  openapi.yaml  playwright.config.ts  pyproject.toml  render-build.sh  render.yaml  start.sh
.github/workflows/: ci-cd.yml
backend/: Dockerfile  crud.py  database.py  main.py  mcp_tools.py  models.py  requirements.txt  schemas.py
backend/crypto/: __init__.py  dilithium_wallet.py  ecdsa_wallet.py
backend/tests/: __init__.py  conftest.py  test_backend.py
frontend/: .env.development  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AttackSimulator.tsx  MigrationAgent.tsx  WalletDashboard.tsx
frontend/tests/: e2e.spec.ts  setup.test.ts  utils.test.ts
